@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction


class CreateMapUI {

}

class CreateMapController {
  +CreateMapController()
  +createMap(dto)
}

class MapDTO {
    - size : int
    - name : String
    - scale : int
    + getSize()
    + getName()
    + getScale()
}

class MapMapper {
    + toMap(dto)
}

class MapRepository {
    + createMap(dto)
    + createMap(size, name, scale)
    + addMap(map)
}

class Repositories {
    - Repositories()
    + getInstance()
    + getMapRepository()
}

class Map {
  - size : int
  - name : String
  - scale : int
  - industries : List<Industry>
  - cities : List<City>
  + checkSize(size)
  + checkName(name)
  + checkScale(scale)
}

CreateMapUI ..> CreateMapController

CreateMapController ..> MapRepository
CreateMapController ..> Repositories
MapMapper --> "1" MapDTO: dto
MapRepository --> "1" MapMapper: mapper
MapRepository --> "*" Map: map
Repositories --> "1" MapRepository : mapRepository
Repositories -> "1" Repositories : instance


@enduml